--- a/v2.curves.html
+++ b/v2.curves.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>Yesh Racing Car - v2 (curves)</title>
+  <title>Racing Car - v2 (curves)</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href="common.css" rel="stylesheet" type="text/css" />
 </head> 
